--- a/src/main/resources/es/cesur/progprojectpok/view/centro-pokemon-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/centro-pokemon-view.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="401.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CentroPokController">
+<AnchorPane prefHeight="465.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CentroPokController">
    <children>
-      <ImageView fitHeight="519.0" fitWidth="715.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="514.0" fitWidth="826.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/centro-pokemon.jpeg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="393.0" fitWidth="246.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="cerrarCurar" fitHeight="393.0" fitWidth="246.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/nurse-joy.png" />
          </image>
@@ -115,6 +115,11 @@
          </children>
       </AnchorPane>
       <Button layoutX="424.0" layoutY="349.0" mnemonicParsing="false" onAction="#realizarCura" prefHeight="44.0" prefWidth="82.0" style="-fx-background-radius: 5; -fx-border-color: black; -fx-border-radius: 5; -fx-border-width: 2;" text="Curar">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="70.0" layoutY="393.0" mnemonicParsing="false" onAction="#btnBACK" prefHeight="44.0" prefWidth="106.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: black; -fx-border-width: 2;" text="← Volver ">
          <font>
             <Font size="17.0" />
          </font>
