--- a/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.EquipoController">
    <children>
       <ImageView fitHeight="558.0" fitWidth="968.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,18 +19,9 @@
       </ImageView>
       <AnchorPane layoutX="619.0" layoutY="101.0" opacity="0.93" prefHeight="384.0" prefWidth="295.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 3;">
          <children>
-            <AnchorPane layoutX="25.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
-               <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/Gif-Pok.gif" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
             <AnchorPane layoutX="162.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img2" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" onMouseClicked="#clickPok2" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -38,7 +30,7 @@
             </AnchorPane>
             <AnchorPane layoutX="25.0" layoutY="143.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img3" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" onMouseClicked="#clickPok3" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -47,7 +39,7 @@
             </AnchorPane>
             <AnchorPane layoutX="162.0" layoutY="143.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img4" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" onMouseClicked="#clickPok4" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -56,7 +48,7 @@
             </AnchorPane>
             <AnchorPane layoutX="25.0" layoutY="261.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img5" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" onMouseClicked="#clickPok5" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -65,11 +57,16 @@
             </AnchorPane>
             <AnchorPane layoutX="162.0" layoutY="261.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img6" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" onMouseClicked="#clickPok6" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="25.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
+               <children>
+                  <ImageView fx:id="img1" fitHeight="65.0" fitWidth="67.0" layoutX="13.0" layoutY="17.0" onMouseClicked="#clickPok1" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
          </children>
@@ -82,38 +79,42 @@
             <InnerShadow />
          </effect>
       </Label>
-      <AnchorPane layoutX="89.0" layoutY="120.0" prefHeight="333.0" prefWidth="500.0" style="-fx-background-color: #43CEB5; -fx-border-color: #21C190; -fx-border-width: 8;">
+      <AnchorPane layoutX="89.0" layoutY="119.0" prefHeight="333.0" prefWidth="500.0" style="-fx-background-color: #43CEB5; -fx-border-color: #21C190; -fx-border-width: 8;">
          <children>
-            <ImageView fitHeight="119.0" fitWidth="119.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgFinal" fitHeight="119.0" fitWidth="119.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Gif-Pok.gif" />
                </image>
             </ImageView>
-            <ProgressBar layoutX="183.0" layoutY="158.0" prefHeight="18.0" prefWidth="198.0" progress="1.0" />
-            <Label layoutX="183.0" layoutY="30.0" prefHeight="33.0" prefWidth="260.0" text="CHARIZARD">
+            <ProgressBar fx:id="barVida" layoutX="183.0" layoutY="158.0" prefHeight="18.0" prefWidth="198.0" progress="1.0" />
+            <Label fx:id="lblNomPok" layoutX="183.0" layoutY="30.0" prefHeight="33.0" prefWidth="148.0" text="CHARIZARD">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <ImageView fitHeight="33.0" fitWidth="33.0" layoutX="183.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgTipo1" fitHeight="33.0" fitWidth="33.0" layoutX="78.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/IconosTipos/icoFuego.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="35.0" fitWidth="33.0" layoutX="225.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgtipo2" fitHeight="35.0" fitWidth="33.0" layoutX="113.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/IconosTipos/icoVolador.png" />
                </image></ImageView>
-            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="187.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgGen" fitHeight="25.0" fitWidth="23.0" layoutX="187.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/imagen.png" />
                </image>
             </ImageView>
             <AnchorPane layoutX="156.0" layoutY="39.0" prefHeight="134.0" prefWidth="3.0" style="-fx-background-color: black; -fx-background-radius: 10;" />
-            <TextArea layoutX="65.0" layoutY="207.0" prefHeight="98.0" prefWidth="370.0" />
+            <TextArea fx:id="txtDescrip" layoutX="65.0" layoutY="207.0" prefHeight="98.0" prefWidth="370.0" />
+            <Label fx:id="lblNivel" layoutX="36.0" layoutY="160.0" prefHeight="33.0" prefWidth="33.0" text="NIVEL" />
+            <ImageView fx:id="imgObj" fitHeight="41.0" fitWidth="52.0" layoutX="184.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
          </children>
          <effect>
             <InnerShadow />
          </effect>
       </AnchorPane>
+      <Label fx:id="idEntrenador" layoutX="540.0" layoutY="49.0" text="Label" visible="false" />
+      <Button layoutX="232.0" layoutY="474.0" mnemonicParsing="false" onAction="#cargarEquipo" prefHeight="41.0" prefWidth="198.0" text="Cargar equipo" />
    </children>
 </AnchorPane>
