--- a/src/main/resources/es/cesur/progprojectpok/view/captura-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/captura-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,7 +21,7 @@
       </ImageView>
       <AnchorPane layoutY="521.0" prefHeight="160.0" prefWidth="1013.0" style="-fx-background-color: #742005; -fx-border-color: #000000; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;">
          <children>
-            <Button layoutX="639.0" layoutY="81.0" mnemonicParsing="false" onAction="#btnCapturar" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="Capturar">
+            <Button layoutX="823.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnCapturar" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="Capturar">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -44,12 +45,12 @@
                   <InnerShadow />
                </effect>
             </Button>
-            <ImageView fitHeight="139.0" fitWidth="143.0" layoutX="440.0" layoutY="19.0" opacity="0.13" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="cerrarCaptura" fitHeight="139.0" fitWidth="143.0" layoutX="440.0" layoutY="19.0" opacity="0.13" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/pokeball.png" />
                </image>
             </ImageView>
-            <Button layoutX="819.0" layoutY="81.0" mnemonicParsing="false" onAction="#btnHuir" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #0C9B8D; -fx-background-radius: 20;" text="HUIR">
+            <Button layoutX="727.0" layoutY="89.0" mnemonicParsing="false" onAction="#btnHuir" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #0C9B8D; -fx-background-radius: 20;" text="HUIR">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -75,9 +76,33 @@
             </Button>
             <AnchorPane layoutX="30.0" layoutY="15.0" opacity="0.6" prefHeight="133.0" prefWidth="344.0" style="-fx-background-color: linear-gradient(to bottom, white, #CDD7D6); -fx-background-radius: 15; -fx-border-radius: 15; -fx-border-color: linear-gradient(to bottom, yellow, orange); -fx-border-width: 5;">
                <children>
-                  <Label fx:id="lblComb1" alignment="TOP_LEFT" layoutX="16.0" layoutY="13.0" prefHeight="107.0" prefWidth="312.0" text="Label" />
+                  <Label fx:id="lblCaptura" alignment="TOP_LEFT" layoutX="16.0" layoutY="13.0" prefHeight="107.0" prefWidth="312.0" />
                </children>
             </AnchorPane>
+            <Button layoutX="639.0" layoutY="15.0" mnemonicParsing="false" onAction="#btnGenerarPok" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="Generar">
+               <font>
+                  <Font name="System Bold" size="22.0" />
+               </font>
+               <textFill>
+                  <LinearGradient endX="1.0" endY="1.0">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </textFill>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </Button>
          </children>
       </AnchorPane>
       <ImageView fx:id="pokCap" fitHeight="150.0" fitWidth="174.0" layoutX="538.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
@@ -85,5 +110,26 @@
             <Image url="@../images/blastoise-frente.gif" />
          </image>
       </ImageView>
+      <ImageView fx:id="imgEntrenador" fitHeight="183.0" fitWidth="219.0" layoutX="224.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/nurse-joy.png" />
+         </image>
+      </ImageView>
+      <AnchorPane fx:id="menuMote" disable="true" layoutX="363.0" layoutY="185.0" opacity="0.93" prefHeight="210.0" prefWidth="363.0" style="-fx-background-color: #43CEB5; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-border-width: 3;">
+         <children>
+            <TextField fx:id="txtPreguntaMote" alignment="CENTER" editable="false" layoutX="20.0" layoutY="14.0" prefHeight="50.0" prefWidth="318.0" text="¿Quieres ponerle un mote?">
+               <font>
+                  <Font name="System Bold" size="22.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btnSi" layoutX="58.0" layoutY="96.0" mnemonicParsing="false" onAction="#btnPonerMoteSi" prefHeight="44.0" prefWidth="82.0" text="SI" />
+            <Button fx:id="btnNo" layoutX="215.0" layoutY="96.0" mnemonicParsing="false" onAction="#btnPonerMoteNo" prefHeight="44.0" prefWidth="82.0" text="NO" />
+            <TextField fx:id="txtMote" disable="true" layoutX="54.0" layoutY="96.0" prefHeight="44.0" prefWidth="251.0" promptText="Felipe">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
