--- a/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -19,7 +12,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="cerrarCombatePK" prefHeight="509.0" prefWidth="922.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CombateController">
+<AnchorPane fx:id="cerrarCombatePK" prefHeight="509.0" prefWidth="922.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CombateController">
    <children>
       <ImageView fitHeight="524.0" fitWidth="1013.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -37,12 +30,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
+                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
+                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
                            </color>
                         </Stop>
                      </stops>
@@ -52,11 +45,6 @@
                   <InnerShadow />
                </effect>
             </Button>
-            <ImageView fitHeight="139.0" fitWidth="143.0" layoutX="440.0" layoutY="19.0" opacity="0.13" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/pokeball.png" />
-               </image>
-            </ImageView>
             <Button layoutX="636.0" layoutY="81.0" mnemonicParsing="false" onAction="#btnPK" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #149D10; -fx-background-radius: 20;" text="POKéMON">
                <font>
                   <Font name="System Bold" size="22.0" />
@@ -66,12 +54,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
+                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
+                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
                            </color>
                         </Stop>
                      </stops>
@@ -81,6 +69,11 @@
                   <InnerShadow />
                </effect>
             </Button>
+            <ImageView fitHeight="139.0" fitWidth="143.0" layoutX="440.0" layoutY="17.0" opacity="0.13" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/pokeball.png" />
+               </image>
+            </ImageView>
             <Button layoutX="819.0" layoutY="11.0" mnemonicParsing="false" onAction="#btnMochila" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #C88B09; -fx-background-radius: 20;" text="MOCHILA">
                <font>
                   <Font name="System Bold" size="22.0" />
@@ -90,12 +83,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
+                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
+                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
                            </color>
                         </Stop>
                      </stops>
@@ -114,12 +107,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
+                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
+                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
                            </color>
                         </Stop>
                      </stops>
@@ -134,6 +127,11 @@
                   <Label fx:id="lblComb1" alignment="TOP_LEFT" layoutX="16.0" layoutY="13.0" prefHeight="107.0" prefWidth="312.0" text="Label" />
                </children>
             </AnchorPane>
+            <Button alignment="CENTER" layoutX="384.0" layoutY="62.0" mnemonicParsing="false" onAction="#btnPokemon" prefHeight="35.0" prefWidth="245.0" style="-fx-background-color: 0;" text="↻ CARGAR POKEMON" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
       <ImageView fx:id="Perso2" fitHeight="150.0" fitWidth="174.0" layoutX="538.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
