--- a/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
@@ -153,7 +153,7 @@
                   <Image url="@../images/male-icon.png" />
                </image>
             </ImageView>
-            <ProgressBar fx:id="prgrsBar1" layoutX="140.0" layoutY="56.0" prefWidth="200.0" progress="0.09" style=" -fx-accent: red" />
+            <ProgressBar fx:id="prgrsBar1" layoutX="140.0" layoutY="56.0" prefWidth="200.0" progress="0.09" style=" -fx-accent: green"/>
             <Label alignment="CENTER_RIGHT" layoutX="100.0" layoutY="48.0" prefHeight="35.0" prefWidth="40.0" text="PS">
                <font>
                   <Font size="14.0" />
